--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: 2px dotted red;
 }
 
 body {
@@ -12,6 +13,8 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+    margin: 20px;
+
 }
 
 .header-links {
@@ -23,4 +26,12 @@ main-container {
     display: flex;
     flex-direction: column;
 }
+
+.intro-container {
+    display: flex;
+    align-items: center;    
+    justify-content: space-between;
+}
+
+
 
