Create initial footer CSS structure

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     justify-content: space-between;
     background-color: #1F2937;
     color:white;
+    padding: 20px;
 }
 
 .header-links {
@@ -37,6 +38,7 @@ main-container {
 
 .info-container {
     display: flex;
+    padding: 100px;
 }
 
 .quote-container {
@@ -68,10 +70,10 @@ main-container {
 
 .cta {
     display: flex;
-    background-color: #3882F6;
-    padding: 50px;
     align-items: center;
+    background-color: #3882F6;
     gap: 50px;
+    padding: 50px; 
 }
 
 .cta-text {
@@ -80,4 +82,14 @@ main-container {
 
 .cta-heading {
     font-weight: 900;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: white;
+    padding: 20px;
+    
 }
