Create initial CSS structure for info section

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,31 @@ main-container {
 
 .info-container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 100px;
+}
+
+.info-heading {
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.info-pic-container {
+    display: flex;
+    margin-top: 20px;
+    gap: 80px;
+}
+
+.pic-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.info-description {
+    font-size: 18px;
 }
 
 .quote-container {
