--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 2px red dotted;
 }
 
 body {
@@ -54,6 +53,7 @@ main-container {
 .intro-text {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 30px;
 }
 
@@ -92,8 +92,16 @@ main-container {
     gap: 20px;
 }
 
+.info-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
 .info-heading {
     font-size: 36px;
+    text-align: center;
     font-weight: 700;
     flex-shrink: 0;
 }
@@ -101,6 +109,7 @@ main-container {
 .info-pic-container {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
     gap: 20px;
 }
@@ -108,8 +117,14 @@ main-container {
 .pic-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    text-align: center;
     gap: 20px;
+}
+
+.pic-container img {
+    border: 3px solid #3882F6;
 }
 
 .quote-container {
