--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    border: 2px dotted red;
 }
 
 body {
@@ -135,7 +136,6 @@ body {
     text-align: center;
     gap: 20px;
     max-width: 200px;
-    margin: 0 auto;
 }
 
 .pic-container img {
