--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 2px dotted red;
 }
 
 body {
@@ -139,7 +138,7 @@ body {
     max-width: 200px;
 }
 
-.pic-container img {
+.member-img img {
     border: 3px solid #000000;
     width: 100%;
 }
