--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body {
 }
 
 .intro {
-    font-size: 48px;
+    font-size: 64px;
     font-weight: 800;
     margin-bottom: -20px;
 }
@@ -101,8 +101,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 44px 100px 100px 100px;
-    gap: 20px;
+    padding: 100px;
     background-color:#e3ec8e;
 }
 
@@ -110,11 +109,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
 }
 
 .team-heading {
-    font-size: 48px;
+    font-size: 56px;
     text-align: center;
     font-weight: 700;
     flex-shrink: 0;
