--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ body {
 
 .member-img img {
     border: 3px solid #000000;
+    border-radius: 10px;
     width: 100%;
 }
 
@@ -149,14 +150,15 @@ body {
 
 .quote-container {
     display: flex;
-    background-color: #E5E7EB;
+    background-color: #3d6413;
     padding: 100px;
 }
 
 .quote {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 50px;
+    color: white;
 }
 
 .quote-text {
@@ -165,7 +167,7 @@ body {
 }
 
 .quote-src {
-    align-self: flex-end;
+    align-self: center;
 }
 
 .cta-container {
