Change footer bg-color

--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 10px;
-    background-color: #1F2937;
+    background-color: #3d6413;
     color: white;
     padding: 20px;
 }
