--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,9 @@ body {
     display: flex;
     align-items: center;    
     justify-content: center;
-    background-color: #1F2937;
+    background-image: url(./pictures/breaking-bad-chemistry.gif);
+    background-size: cover;
+    height: 1000px;
     color:white;
     padding: 100px;
 }
