Replace intro container background and added transparent navbar

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #3d6413;
 }
 
 .header {
@@ -18,7 +19,7 @@ body {
     top:0;
     height: 60px;
     padding-left: 20px;
-    background-color: #1F2937;
+    background-color: rgba(17, 17, 17, 0.5);
     color:white;
 }
 
@@ -52,7 +53,7 @@ body {
     display: flex;
     align-items: center;    
     justify-content: center;
-    background-image: url(./pictures/breaking-bad-chemistry.gif);
+    background-image: url(./pictures/intro-bg.jpg);
     background-size: cover;
     height: 1000px;
     color:white;
