--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: 2px dotted red;
 }
 
 body {
@@ -67,6 +68,7 @@ body {
 
 .intro-main {
     display: flex;
+    height:600px;
 }
 
 .intro-text {
@@ -85,7 +87,6 @@ body {
 
 .intro-description {
     font-size: 24px;
-    font-weight: 800px;
     color:#ffffff;
 }
 
